--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Weather Data</title>
-</head>
-<body>
-<h1>Weather Data</h1>
-<table border="1">
-    <thead>
-    <tr>
-        <th>City</th>
-        <th>Temperature (°C)</th>
-        <th>Fetched At</th>
-        <th>Local Time</th>
-        <th>Status</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="w : ${weathers}">
-        <td th:text="${w.getCityName()}"></td>
-        <td th:text="${w.getTemperature()}"></td>
-        <td th:text="${#temporals.format(w.getFetchedAt(), 'HH:mm dd.MM.yyyy')}"></td>
-        <td th:text="${#temporals.format(w.getLocalTime(), 'HH:mm dd.MM.yyyy')}"></td>
-        <td th:text="${w.getStatus()}"></td>
-    </tr>
-    </tbody>
-</table>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Weather Data</title>
+    </head>
+    <body>
+        <h1>Weather Data</h1>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>City</th>
+                    <th>Temperature (°C)</th>
+                    <th>Fetched At</th>
+                    <th>Local Time</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody id="weather-table-body">
+                <tr th:each="w : ${weathers}" th:if="${w.status != T(org.example.in2.model.WeatherModel.Status).FAILURE}">
+                    <td th:text="${w.cityName}"></td>
+                    <td th:text="${w.temperature}"></td>
+                    <td th:text="${#temporals.format(w.fetchedAt, 'HH:mm dd.MM.yyyy')}"></td>
+                    <td th:text="${#temporals.format(w.localTime, 'HH:mm dd.MM.yyyy')}"></td>
+                    <td th:text="${w.status}"></td>
+                </tr>
+
+                <tr th:each="w : ${weathers}" th:if="${w.status == T(org.example.in2.model.WeatherModel.Status).FAILURE}">
+                    <td th:text="${w.cityName}"></td>
+                    <td colspan="4" style="color:red; font-weight:bold; text-align:center;">ERROR</td>
+                </tr>
+            </tbody>
+        </table>
+    </body>
+        <script>
+            setTimeout(() => location.reload(), 30000);
+        </script>
 </html>
